# devnexus-common

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  README.md  package.json  pyproject.toml  requirements-dev.txt
.github/workflows/: PUBLISH_BOOTSTRAP.md  README-publish-vpc-runner-base.md  ci.yml  devnexus-common-stress.yml  publish-vpc-runner-base.yml  release.yml
common/a2a/: __init__.py  client.py  exceptions.py
common/compliance/: README.md  __init__.py  audit.py  standards-config.yaml  standards_loader.py
common/config/: __init__.py  tracing.py
common/db/: __init__.py  manager.py  postgres.py  query_translator.py
common/db/backends/: __init__.py  asyncpg.py  base.py  psycopg3.py
common/llm/: __init__.py  client.py
common/notifications/: README.md  __init__.py  notifier.py
common/notifications/terraform/: .terraform.lock.hcl  main.tf  variables.tf
docker/vpc-runner/: .dockerignore  Dockerfile  README.md
docs/: README.md  STANDARDS_COMPLIANCE_FRAMEWORK.md
tests/: conftest.py  test_compliance.py  test_health_check_lazy_init.py  test_notifications.py  test_pool_saturation.py  test_postgres_sync.py  test_psycopg3_backend.py  test_query_translator.py  test_run_sync_from_running_loop.py  test_statement_timeout.py
tests/stress/: conftest.py  test_concurrent_cancellation.py
