[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devnexus-common"
dynamic = ["version"]
description = "Shared Python utilities for DarojaAI projects: PostgreSQL client, LLM client, A2A client, and unified tracing."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "DarojaAI"},
]
keywords = ["postgres", "llm", "a2a", "tracing", "gcp", "notifications"]
dependencies = [
    "asyncpg>=0.29",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "httpx>=0.26",
    "starlette>=0.35",
]

[project.optional-dependencies]
tracing = [
    "langfuse>=2.0",
    "langsmith>=0.1",
]
notifications = [
    "httpx>=0.26",
    "starlette>=0.35",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools_scm]
# Derive version from the most recent vX.Y.Z git tag.
# Tags are produced by semantic-release; this keeps pyproject.toml
# as a single source of truth for *what the package is* and tags as
# the source of truth for *what version it is*.
tag_regex = "^v(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+)$"
fallback_version = "0.0.0"

[tool.setuptools.packages.find]
where = ["."]
include = ["common*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
